added some comments and updated gitignore to reflect the necessary requirements of the first bonus assignment

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+# PROJECT SPECIFIC GITIGNORE CODE
+
+
+# ignore environment variables in the ".env" file:
+.env
+
+
+
+# DEFAULT PYTHON GITIGNORE CODE BELOW
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
