--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 
 #The 'sengrid' package
 sengrid
+
+#Python 'dotenv' package for creating .env files to store the values of environment variables
+python-dotenv
